--- a/SampleREST2/Ballerina.toml
+++ b/SampleREST2/Ballerina.toml
@@ -1,8 +1,8 @@
 [package]
 org = "SumayyaTestOrg"
-name = "SampleGRPC"
+name = "SampleREST2"
 version = "1.0.0"
-export = ["SampleGRPC"]
+export = ["SampleREST2"]
 distribution = "2201.3.1"
 
 [build-options]
