--- a/FaresAPI/Ballerina.toml
+++ b/FaresAPI/Ballerina.toml
@@ -1,8 +1,8 @@
 [package]
 org = "SumayyaTestOrg"
-name = "SampleGQL"
+name = "FaresAPI"
 version = "1.0.0"
-export = ["SampleGQL"]
+export = ["FaresAPI"]
 distribution = "2201.3.1"
 
 [build-options]
