--- a/SampleGQLX/Ballerina.toml
+++ b/SampleGQLX/Ballerina.toml
@@ -1,8 +1,8 @@
 [package]
 org = "SumayyaTestOrg"
-name = "FinanceService"
+name = "SampleGQLX"
 version = "1.0.0"
-export = ["FinanceService"]
+export = ["SampleGQLX"]
 distribution = "2201.3.1"
 
 [build-options]
