--- a/SampleGQL/Ballerina.toml
+++ b/SampleGQL/Ballerina.toml
@@ -1,9 +1,8 @@
 [package]
 org = "SumayyaTestOrg"
-name = "SampleGQLX"
+name = "SampleGQL"
 version = "1.0.0"
-export = ["SampleGQLX"]
-distribution = "2201.3.1"
+distribution = "2201.4.1"
 
 [build-options]
 observabilityIncluded = true
